--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
           <div class="rps rps-rules">
-          <div class="rps-buttons-container">
+          <div class="rps-buttons-container rps-rules-button-container">
             <div class="rps__background-line rps__rules-line line-1">
               <i class="fa-solid fa-arrow-left-long arrow-1"></i>
               <h3 class="beats beats-1">beats</h3>
